<resources>
    <string name="app_name">SenaSoft2021</string>
    <string name="title_activity_inicio">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="senasoft2021">SenaSoft2021</string>
    <string name="denuncias">Denuncias</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="generate_qr_code">Generate Qr</string>
    <string name="registerme">Registrarme</string>
    <string name="not_have_account">No tengo cuenta</string>
    <string name="ingresar">Ingresar</string>
    <string name="login">Login</string>
    <string name="login_as_admin">Ingresar como administrador</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Guardar</string>
    <string name="register_event">Registrar un evento</string>
    <string name="click_here_to_insert_image">Click qui para ingresar una imagen</string>
    <string name="select_star_date">Seleccionar la fecha de inicio</string>
    <string name="select_end_date">Seleccionar la fecha de finalización</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="jjjjjjj">MAODODS</string>
    <string name="puedes_scanear_algo_aqui">Puedes scanear algo aqui</string>
    <string name="subscribe_me">Suscribirme</string>
    <string name="help">Pedir ayuda</string>
    <string name="info_app">Nuestra prioridad es ayudar a las mujeres en todo lo posible\n <b>En esta app puedes:</b>\n
    - Pedir ayuda sobre algún problema o dificultad que tengas\n
    - Si tienes alguna denuncia o necesitas acesoramiento en alguna situación, pudes pedirlo\n
    - Participar en los diferentes eventos que se realizan diariamente\n
    - Compartir rapidamente tus datos mediante un codigo QR\n
    </string>
    <string name="no_denuncias">No hay denuncias registradas</string>
    <string name="register_denuncia">Registrar Denuncia</string>
    <string name="no_eventos">No se han registrado nuevos eventos</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="abrir_gallery">Escoger desde la galeria</string>
    <string name="competencia">Competencias</string>
    <string name="info_torneo">Crea, importa y edita tu contenido multimedia para participar en las competencias y poder ganar,
        comparte con nostos tus creaciones, no te quedes por fuera </string>
    <string name="info_help">Puedes pedir ayuda sobre alguna situacion o dificultad que precentes</string>
    <string name="info_denuncias">Puedes Crear denuncias y gurdarlas</string>
</resources>